unpackaged/main/default/objects/Custom_Search_Field__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>Custom_Search_Field__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Custom_Search_Fields</relationshipLabel>
    <relationshipName>Custom_Search_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>