unpackaged/main/default/objects/Custom_Search_Field__mdt/fields/Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter Field</label>
    <type>Checkbox</type>
</CustomField>