unpackaged/main/default/objects/Custom_Search_Field__mdt/fields/Operators__c.field-meta.xml
<CustomField>
    <fullName>Operators__c</fullName>
    <label>Operators</label>
    <length>255</length>
    <type>Text</type>
</CustomField>